<resources>
    <string name="app_name">SuperFriends</string>
    <string name="friend_picture">Friend picture</string>
    <string name="friend_favorite">favorite friend</string>
    <string name="search_friend">Buscar en tus amigos</string>
    <string name="facebook_app_id">1874933972566991</string>
    <string name="fb_login_protocol_scheme">fb1874933972566991</string>
    <string name="facebook_login_cancelled">Facebook login has been cancelled</string>
    <string name="friends">Friends</string>
    <string name="special">Special</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_with_facebook">Enter with Facebook</string>
    <string name="error_while_getting_profile_picture">Something wrong happened while retrieving your profile picture</string>
    <string name="log_out">Log out</string>
    <string name="name">name</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="notes">Notes</string>
    <string name="no_user_found">No user was found</string>
</resources>
