<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/welcome_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".welcome.view.WelcomeActivity">

    <LinearLayout
        android:id="@+id/welcome_texts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/welcome_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBattleShipGray"
            android:textSize="22sp"
            android:text="@string/welcome_to" />

        <TextView
            android:id="@+id/welcome_special"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/special" />

        <TextView
            android:id="@+id/welcome_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textColor="@color/colorVeryDarkCyan"
            android:textSize="50sp"
            android:text="@string/friends" />
    </LinearLayout>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/welcome_fb_login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/welcome_login_button"
        style="@style/green_button"
        android:onClick="performFacebookLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:text="@string/enter_with_facebook" />

    <include
        android:id="@+id/loading_view"
        layout="@layout/view_loading"
        android:visibility="gone" />
</android.support.constraint.ConstraintLayout>