<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <data>

        <variable
            name="profile"
            type="com.alfredobejarano.superfriends.profile.model.ProfileInformation"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/profile_toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:popupTheme="?attr/actionBarStyle"
            tools:ignore="UnusedAttribute" />

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bk_friend_picture"
            android:contentDescription="@string/friend_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_toolbar" />

        <TextView
            android:id="@+id/profile_friend_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:gravity="center"
            android:textColor="@color/colorVeryDarkCyan"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture"
            tools:text="Andrea Molina" />

        <LinearLayout
            android:id="@+id/profile_contents"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="11dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/profile_friend_name">
            <TextView
                android:id="@+id/profile_birthday_label"
                android:text="@string/birthday"
                style="@style/profile_label" />
            <TextView
                android:id="@+id/profile_phone_number_label"
                android:text="@string/phone_number"
                style="@style/profile_label" />
            <TextView
                android:id="@+id/profile_notes_label"
                android:text="@string/notes"
                style="@style/profile_label" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>